applications/level3-dynamic-db/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: level3-dynamic-db
  namespace: poc-hashicorp-vault-application
  labels:
    app: level3-dynamic-db
spec:
  type: ClusterIP
  selector:
    app: level3-dynamic-db
  ports:
    - name: http
      port: 8080
      targetPort: http
